--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,8 +1,6 @@
-$red : blue;
+@import 'variables';
+@import 'mixins';
 body{
-    background-color: $red;
+    font-family: $mainFont;
 }
 
-h1{
-    display: flex;
-}
