--- a/scss/app.scss
+++ b/scss/app.scss
@@ -14,6 +14,14 @@ body{
     @include box-sizing(border-box);
     font-family: $mainFont;
 }
+.container {
+    max-width: 1100px;
+    width: 90%; 
+    margin: 0 auto;
+}
+.hidden{
+    display: none;
+}
 .header {
     display: flex;
     justify-content: space-between;
