--- a/css/app.css
+++ b/css/app.css
@@ -35,5 +35,10 @@ html {
           right: 0;
           padding: 1rem;
           max-width: 400px;
+
+          
+          .button {
+            @include button($secondary)
+       } 
 }
 }
