--- a/css/app.css
+++ b/css/app.css
@@ -26,7 +26,6 @@ html {
   padding: 1rem 0;
 
 }
-
 .cart-content{
   position: relative;
             &:hover .content {
@@ -36,9 +35,50 @@ html {
           padding: 1rem;
           max-width: 400px;
 
-          
-          .button {
-            @include button($secondary)
-       } 
+   
 }
+}
+.hero {
+  background-image: url(../img/hero.jpg);
+  background-size: cover;
+  background-position: center center;
+  min-height: 24rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.hero .hero-content {
+  color: #ffffff;
+}
+
+.hero .hero-content h2 {
+  font-size: 2.6rem;
+  font-weight: 400;
+}
+
+.hero .hero-content form {
+  position: relative;
+}
+.hero .hero-content form input[type="text"] {
+  width: 100%;
+  height: 3rem;
+  padding-left: .5rem;
+}
+
+.hero .hero-content form input[type="submit"] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: block;
+  text-indent: -9999px;
+  background-color: transparent;
+  border: none;
+  width: 3rem;
+  height: 3rem;
+  background-image: url(../img/search.png);
+  background-repeat: no-repeat;
+  background-position: center center;
 }
