--- a/css/app.css
+++ b/css/app.css
@@ -62,6 +62,13 @@ html {
 .hero .hero-content form {
   position: relative;
 }
+@media (min-width: 768px){
+  .hero .hero-content form {
+    width: 40%;
+  }
+}
+  
+
 .hero .hero-content form input[type="text"] {
   width: 100%;
   height: 3rem;
