--- a/css/app.css
+++ b/css/app.css
@@ -229,3 +229,62 @@ html {
   color: #ffffff;
   text-decoration: none;
 }
+.footer {
+  border-top: 1px solid #e5e5e5;
+  margin-top: 1rem;
+  padding-top: 2rem;
+}
+
+.footer .container-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+@media (min-width: 768px) {
+  .footer .container-footer {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+  }
+}
+
+.menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  margin-bottom: 1rem;
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+
+@media (min-width: 1000px) {
+  .menu {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 calc(30% - 1rem);
+    flex: 0 0 calc(30% - 1rem);
+  }
+}
+
+.menu a {
+  color: #000000;
+  text-decoration: none;
+  margin-bottom: .4rem;
+  text-align: center;
+}
+
+@media (min-width: 1000px) {
+  .menu a {
+    text-align: left;
+  }
+}
