--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,5 +7,6 @@ $desktop : 1000px;
 $primary : #33C3F0;
 $secondary : #741d51;
 $alternative : #e44e52;
+$black : #000000;
 $gray : #f2f2f2;
 $white: #ffffff;
